--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
    implementation("javax.annotation:javax.annotation-api")
    implementation("io.micronaut.kotlin:micronaut-kotlin-extension-functions")
    runtimeOnly("ch.qos.logback:logback-classic")
+   runtimeOnly("org.slf4j:jcl-over-slf4j:1.7.26")
    runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
    implementation("org.freemarker:freemarker:2.3.30")
@@ -46,6 +47,9 @@ dependencies {
    implementation("com.atlassian.commonmark:commonmark-ext-ins:0.15.2")
    implementation("com.atlassian.commonmark:commonmark-ext-yaml-front-matter:0.15.2")
 
+   implementation("org.apache.commons:commons-configuration2:2.7") { transitive = false }
+   runtime("commons-beanutils:commons-beanutils:1.9.4")
+   runtime("org.apache.commons:commons-text:1.9")
    implementation("org.eclipse.collections:eclipse-collections-api:10.4.0")
    implementation("org.eclipse.collections:eclipse-collections:10.4.0")
 }
